# RichSim

./: CMakeLists.txt  Rich_Simplified.cc  plotHits3D.py  plotHits3DOK.py  plotHitsG4.py  plotHitsPMT.py
